fixed overflow

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -108,7 +108,7 @@ body {
 }
 
 div.overflow-auto {
-  height: 50px;
+  height: 125px;
 }
 
 /* landing page CSS */
